# ChangeLog for media-sound/jack-audio-connection-kit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/jack-audio-connection-kit/ChangeLog,v 1.103 2008/01/06 19:28:12 flameeyes Exp $

  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  Add missing samplerate dependency (bug #202162) for netjack. Fix minor syns
  in ebuilds.

  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  jack-audio-connection-kit-0.99.0-r3.ebuild:
  Remove all keywords but ~mips from 0.99.0-r3 version.

  19 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/jack-audio-connection-kit-0.80.0-alsalib-fix.patch,
  -files/jack-audio-connection-kit-0.100.0-coreaudio.patch,
  -files/jack-audio-connection-kit-0.100.0-driver_interface.patch,
  -files/jack-audio-connection-kit-doc-option.patch,
  -files/jack-audio-connection-kit-mmap_complex.patch,
  -jack-audio-connection-kit-0.99.0-r1.ebuild,
  -jack-audio-connection-kit-0.99.0-r2.ebuild,
  -jack-audio-connection-kit-0.101.1-r1.ebuild,
  -jack-audio-connection-kit-0.102.20.ebuild:
  Cleanup old ebuilds and patches.

  08 Oct 2007; Tom Gall <tgall@gentoo.org>
  +jack-audio-connection-kit-0.103.0-ppc64fix.patch:
  fix for bug #195058 on ppc64

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  Stable for HPPA (bug #186928).

  03 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  Marked ~hppa for now (bug #186928).

  25 Aug 2007; Steve Dibb <beandog@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  amd64 stable

  16 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  ppc stable, bug #186928

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  ia64 stable wrt #186928

  11 Aug 2007; Jose Luis Rivero <yoswink@gentoo.org>