@@ -2,7 +2,9 @@ AUX jack-audio-connection-kit-0.103.0-ppc64fix.patch 2688 RMD160 f5e56bf524078be
 AUX jack-audio-connection-kit-0.103.0-riceitdown.patch 1588 RMD160 9a4c86b480b580e16d407f88fc30b23fcd339efb SHA1 2e082c75e0927525f225e58e73f1a59811eb238c SHA256 4b26b1528cc9ec17bad3968af81ded11d378a5a2379a553f401c1ff2ec03a3c4
 AUX jack-audio-connection-kit-transport.patch 309 RMD160 7b7130dd922ed14988eb591059d643ece39f6757 SHA1 ed8f9d90ec62476643f41ff60735d4aaaee84886 SHA256 74f1d155f365deb1461d070b37ccd7836c32c521d31960a3f4e6c3f2e528bada
 DIST jack-audio-connection-kit-0.103.0.tar.gz 763244 RMD160 72e47ada90b3d2c391c2e712316a975ae2a13ece SHA1 e804189f3dc024dad37da4afb66a30fd9c92b2bf SHA256 a5d9fd696d7ee4a1c7679b5a688155bc1e0abbdf5f144d6762dbbee874df235f
+DIST jack-audio-connection-kit-0.109.0.tar.gz 830475 RMD160 a3aa1b0f2d92f6d8099c82725f844482f61e92b9 SHA1 dec4067ecafbb679d424fa8105560aff89afb99a SHA256 7068d67de58211271e0f61b2caa0a46b68fed885fef69076d0bedd5978013d34
 DIST netjack-0.12.tar.bz2 28044 RMD160 13d13f2a66c891da243f9a286833554f680937ff SHA1 f850ed654d0f115065d96bee34d9f7c05e8c5725 SHA256 c443bcb6ec2b477c52cab2fca75aef80fe2c2c91499e45ffdbb1c28ffaa7ee60
 EBUILD jack-audio-connection-kit-0.103.0.ebuild 4142 RMD160 7398a02f9fcbb711ee036ac8f9cf5acf4e8a441a SHA1 ef7d922ed72a8a044cf9cc9d9346fce1a0eab131 SHA256 cfc6aa621a8fcda3d2c0c009999d7428b6bab500e3a05dbc50acccaf781b57f7
-MISC ChangeLog 20563 RMD160 37a89c110bd9985e259a66fd32d6874d5b97fe63 SHA1 0917c56a8e40da5a41d4ac7a401dfda381b5cc3e SHA256 0bbf3f4ad27d7cf24be5c713b52d0e672e9a12cbe8f9a748822756de1b1ce8c9
+EBUILD jack-audio-connection-kit-0.109.0.ebuild 3792 RMD160 54abee52ddf4fce21080ee88453e66db64f647e3 SHA1 a3224c4cb6270289eea5e53236b123b3ec101e55 SHA256 2d9e2fdfd3af09df98faa63a5d976e2aa7f2d5f76dc56ec0e1164b84ef465f4d
+MISC ChangeLog 20797 RMD160 bfa2deb5ea1272579aa7da0d366ff26823b1088f SHA1 f23bdf11245640684ef097f56787a0085479cfd4 SHA256 016eece739942b810f56778ca97a610c8d932574dc150002972634926b4df305
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
